--- a/AssessmentSystem.MVC/Views/Shared/_Layout.cshtml
+++ b/AssessmentSystem.MVC/Views/Shared/_Layout.cshtml
@@ -17,13 +17,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nome do aplicativo", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Sistema de avaliações", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Sobre", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contato", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Provas", "Index", "Assessments")</li>
+                    <li>@Html.ActionLink("Questões", "Index", "Questions")</li>
+                    <li>@Html.ActionLink("Questionários", "Index", "QuestionOptions")</li>
+                    <li>@Html.ActionLink("Notas", "Index", "StudentAssessmentPerformances")</li>
                 </ul>
             </div>
         </div>
