Atualização de conexão e criação de novos controllers

--- a/AssessmentSystem.MVC/Views/Shared/_Layout.cshtml
+++ b/AssessmentSystem.MVC/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("Questões", "Index", "Questions")</li>
                     <li>@Html.ActionLink("Questionários", "Index", "QuestionOptions")</li>
                     <li>@Html.ActionLink("Notas", "Index", "StudentAssessmentPerformances")</li>
+                    <li>@Html.ActionLink("Estudantes", "Index", "Students")</li>
                 </ul>
             </div>
         </div>
